--- a/index.html
+++ b/index.html
@@ -10,8 +10,18 @@
 	<body>
 		<header>
 		</header>
+		<section>
+			<form>
+				<fieldset>
+					<legend>Distance</legend>
+						<input type="number" name="distance" autofocus required>
+				</fieldset>
+				<fieldset>
+					<legend>Time</legend>
+				</fieldset>				
+			</form>
+		</section>
 		<footer>
-
 		</footer>
 	</body>
 
