--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+		<link rel="stylesheet" href="reset.css" />
 		<link rel="stylesheet" href="style.css" />
 		<title>Checkpoint calculator</title>
 	</head>
@@ -12,19 +13,19 @@
 		</header>
 		<section>
 			<form>
-				<p>
-				<input type="number" name="distance" min="0" autofocus required>
+				<fieldset>
+				<input type="number" name="distance" placeholder="distance" min="0" autofocus required>
 				<select name="distance_unit">
 					<option value="km">Km</option>
 					<option value="m">m</option>
 				</select>
-				</p>
-				<p>
+				</fieldset>
+				<fieldset>
 				<input type="number" name="hour" placeholder="hour(s)" min="0" step="1">
 				<input type="number" name="minute" placeholder="minute(s)" min="0" max="59" step="1" maxlength="2">
 				<input type="number" name="second" placeholder="second(s)" min="0" max="59" step="1" maxlength="2">
-				</p>
-				<p>
+				</fieldset>
+				<fieldset>
 				Checkpoints <input type="number" name="checkpoint" placeholder="every" min="0" step="1">
 			<select name="checkpoint_unit">
 				<option value="km">kilometer(s)</option>
@@ -34,7 +35,7 @@
 				<option value="second" >second(s)</option>
 			</select>
 			<button> Add a checkpoint </button>
-			</p>
+			</fieldset>
 			<input type="submit" value="Get my checkpoints">
 			</form>
 		</section>
