--- a/index.html
+++ b/index.html
@@ -9,21 +9,23 @@
 	</head>
 	<body>
 		<section id="user_input">
+			<h1>Calculate your checkpoints!</h1>
+			<h2>Enter your goals!</h2>
 			<form>
 				<p>
-					<input type="number" name="distance" placeholder="distance" min="0" autofocus required>
+					<input type="number" name="distance" placeholder="Distance" min="0" autofocus required>
 					<select name="distance_unit">
 						<option value="km">Km</option>
 						<option value="m">m</option>
 					</select>
 				</p>
 				<p>
-					<input type="number" name="hour" placeholder="hour(s)" min="0" step="1">
-					<input type="number" name="minute" placeholder="minute(s)" min="0" max="59" step="1" maxlength="2">
-					<input type="number" name="second" placeholder="second(s)" min="0" max="59" step="1" maxlength="2">
+					<input type="number" name="hour" placeholder="Hour(s)" min="0" step="1">
+					<input type="number" name="minute" placeholder="Minute(s)" min="0" max="59" step="1" maxlength="2">
+					<input type="number" name="second" placeholder="Second(s)" min="0" max="59" step="1" maxlength="2">
 				</p>
 				<p>
-					<input type="number" name="checkpoint" placeholder="every" min="0" step="1">
+					<input type="number" name="checkpoint" placeholder="Checkpoints every" min="0" step="1">
 					<select name="checkpoint_unit">
 						<option value="km">kilometer(s)</option>
 						<option value="m">meter(s)</option>
@@ -31,10 +33,13 @@
 						<option value="min" >minute(s)</option>
 						<option value="second" >second(s)</option>
 					</select>
-					<button> Add a checkpoint </button>
+					<button> Add checkpoints </button>
 				</p>
-				<input type="submit" value="Get my checkpoints">
+				<input type="submit" id="submit" value="Get my checkpoints">
 			</form>
+		</section>
+		<section id="results">
+		<p> Results </p>
 		</section>
 	</body>
 </html>
