--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<section id="user_input">
 			<h1>Calculate your checkpoints!</h1>
-			<h2>Enter your goals!</h2>
+			<h2>Enter your goals:</h2>
 			<form>
 				<p>
 					<input type="number" name="distance" placeholder="Distance" min="0" autofocus required>
@@ -33,7 +33,7 @@
 						<option value="min" >minute(s)</option>
 						<option value="second" >second(s)</option>
 					</select>
-					<button> Add checkpoints </button>
+					<button class="add_button"> Add checkpoints </button>
 				</p>
 				<input type="submit" id="submit" value="Get my checkpoints">
 			</form>
