--- a/index.html
+++ b/index.html
@@ -5,39 +5,41 @@
 		<meta charset="utf-8" />
 		<link rel="stylesheet" href="reset.css" />
 		<link rel="stylesheet" href="style.css" />
-		<title>Checkpoint calculator</title>
+		<title>Checkpoint calculator - See what your checkpoints should be</title>
 	</head>
 	<body>
-		<section id="user_input">
-			<h1>Calculate your checkpoints!</h1>
-			<h2>Enter your goals:</h2>
-			<form>
-				<p>
-					<input type="number" name="distance" placeholder="Distance" min="0" autofocus required>
-					<select name="distance_unit">
-						<option value="km">Km</option>
-						<option value="m">m</option>
-					</select>
-				</p>
-				<p>
-					<input type="number" name="hour" placeholder="Hour(s)" min="0" step="1">
-					<input type="number" name="minute" placeholder="Minute(s)" min="0" max="59" step="1" maxlength="2">
-					<input type="number" name="second" placeholder="Second(s)" min="0" max="59" step="1" maxlength="2">
-				</p>
-				<p>
-					<input type="number" name="checkpoint" placeholder="Checkpoints every" min="0" step="1">
-					<select name="checkpoint_unit">
-						<option value="km">kilometer(s)</option>
-						<option value="m">meter(s)</option>
-						<option value="hour" >hour(s)</option>
-						<option value="min" >minute(s)</option>
-						<option value="second" >second(s)</option>
-					</select>
-					<button class="add_button"> Add checkpoints </button>
-				</p>
-				<input type="submit" id="submit" value="Get my checkpoints">
-			</form>
-		</section>
+		<div id="area_1">
+			<section id="user_input">
+				<h1>Calculate your checkpoints!</h1>
+				<h2>Enter your goals:</h2>
+				<form>
+					<p>
+						<input type="number" name="distance" placeholder="Distance" min="0" autofocus required>
+						<select name="distance_unit">
+							<option value="km">Km</option>
+							<option value="m">m</option>
+						</select>
+					</p>
+					<p>
+						<input type="number" name="hour" placeholder="Hour(s)" min="0" step="1">
+						<input type="number" name="minute" placeholder="Minute(s)" min="0" max="59" step="1" maxlength="2">
+						<input type="number" name="second" placeholder="Second(s)" min="0" max="59" step="1" maxlength="2">
+					</p>
+					<p>
+						<input type="number" name="checkpoint" placeholder="Checkpoints every" min="0" step="1" required>
+						<select name="checkpoint_unit">
+							<option value="km">kilometer(s)</option>
+							<option value="m">meter(s)</option>
+							<option value="hour" >hour(s)</option>
+							<option value="min" >minute(s)</option>
+							<option value="second" >second(s)</option>
+						</select>
+						<button class="add_button"> Add checkpoints </button>
+					</p>
+					<input type="submit" id="submit" value="Get my checkpoints">
+				</form>
+			</section>
+		</div>
 		<section id="results">
 		<p> Results </p>
 		</section>
