--- a/bytime.html
+++ b/bytime.html
@@ -11,6 +11,7 @@
 	<body>
 		<div id="area_1">
 			<section id="user_input">
+				<a href="index.html"> Get checkpoints by distance </a>
 				<h1>Calculate your checkpoints!</h1>
 				<h2>Enter your goals:</h2>
 				<form id="form_1" method="post" action="">
