--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
 	<body>
 		<div id="area_1">
 			<section id="user_input">
+			<a href="bytime.html"> Get checkpoints by time </a>
 				<h1>Calculate your checkpoints!</h1>
 				<h2>Enter your goals:</h2>
 				<form id="form_1" method="post" action="">
 					<p>
 						<input type="number" name="distance" placeholder="Distance" min="0" autofocus required>
 						<select name="distance_unit">
-							<option value="km">Km</option>
-							<option value="m">m</option>
+							<option value="km">kilometer(s)</option>
+							<option value="m">meter(s)</option>
 						</select>
 					</p>
 					<p>
